--- a/sass/components/content/_product-card.scss
+++ b/sass/components/content/_product-card.scss
@@ -12,10 +12,6 @@
       gap: 0.2rem;
     }
     
-    .featured-products h2 {
-      margin-left: 2.2rem;
-    }
-    
     // Positioning the Add to Cart Button on front-page
     .featured-products .button {
       top: 19.5rem;
